--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,13 @@
       </div>
     </div>
 
+    <!-- result section -->
+    <div class="result py-4 d-none bg-light text-center">
+      <div class="container lead">
+        <p>You are <span class="text-primary display-4 p-3">0%</span> ninja</p>
+      </div>
+    </div>
+
     <!-- QUIZ SECTION -->
     <div class="quiz py-4 bg-primary">
       <div class="container">
